# learning-projects

./: README.md
asm-demo/: .gitignore
asm-demo/linux/: Makefile  file.S
asm-demo/win/: Makefile  file.S
azure-functions-from-solution/WatchPortalFunction/: WatchPortalFunction.sln
azure-functions-from-solution/WatchPortalFunction/WatchFunctionsTest/: WatchFunctionUnitTest.cs
azure-functions-from-solution/WatchPortalFunction/WatchPortalFunction/: WatchInfo.cs
encode-base-64/: CMakeLists.txt  main.cpp
faiss-rag-encoder/: .gitignore  README.md  VectorEncoding.ipynb  host_endpoints.py
faiss-rag-encoder/experiments/: VectorEncoding.ipynb  curl.py  observability-engineering.sh
mslearn-create-razor-pages-aspnet-core/ContosoPizza/: ContosoPizza.db
mslearn-create-razor-pages-aspnet-core/ContosoPizza/Pages/: PizzaList.cshtml.cs
mslearn-create-razor-pages-aspnet-core/ContosoPizzaWebApi/: ContosoPizzaWebApi.http  WeatherForecast.cs
mslearn-create-razor-pages-aspnet-core/ContosoPizzaWebApi/Controllers/: PizzaController.cs  WeatherForecastController.cs
mslearn-create-razor-pages-aspnet-core/ContosoPizzaWebApi/Properties/: launchSettings.json
rag-encoder/: .gitignore  README.md  host_endpoints.py
rag-encoder/experiments/: deformable-transformers.sh  page-24.sh
rag-encoder/utils/: document_parser.py  morphological_helpers.py  tokenize_text.py
react-todo-app/: README.md  package-lock.json  package.json
react-todo-app/src/: App.tsx  index.tsx  reducers.tsx  store.tsx
react-todo-app/src/Styles/: main.css
react-todo-app/src/components/: Task.tsx  (+1 more)
(+13 files in other folders)
